--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylef.css" type="text/css">
     <link rel="icon" type="image/x-icon"
-        href="C:\Users\user\Desktop\Learncode\week 1 website\ferrari\images\ferrari_fevicon-removebg-preview.png">
+        href="ferrari_fevicon-removebg-preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>Official Ferrari Website</title>
 
@@ -24,17 +24,17 @@
             <li class="navlist"><a id="blackdot" class="navlink">.</a></li>
         </ul>
        
-        <img src="C:\Users\user\Desktop\Learncode\week 1 website\ferrari\images\white_horse-removebg-preview.png"
+        <img src="white_horse-removebg-preview.png"
             id="ferrarilogo">
         <!--content bodyyyyyyyyyyyyy starts hereeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee-->
     </div>
     <div class="topbody">
-        <img src="images/homepage.jpg" >
+        <img src="homepage.jpg" >
 
         <div class="hiddennav">
             <h3 id="topbodytext1">OFFICIAL FERRARI <br>DEALERS</h3>
             <h3 id="topbodytext2">MENU</h3>
-            <a><img src="C:\Users\user\Desktop\Learncode\week 1 website\ferrari\images\android.png"
+            <a><img src="android.png"
                     id="hiddennavmenu"></a>
         </div>
         <div class="bodytext">
@@ -54,8 +54,8 @@
             <br>
             As well as showrooms and workshops, your local Ferrari dealership is a place to meet up, an essential
             location for every Ferrarista. It’s central to the
-            world that rotates around Ferrari ownership, offering a tailored personalisation programme as well
-            servicing, news, events and other exlusive initiatives .
+            a world that rotates around Ferrari ownership, offering a tailored personalization program as well
+            servicing, news, events, and other exclusive initiatives.
         </div>
         <div class="secondbody2">
             <strong style="font-size: 45px;">ENTER THE WORLD OF FERARRI</strong><br>
@@ -87,12 +87,12 @@
         </div>
 
         <div class="thirdbodyimg">
-            <img src="images/3rdbodyimg.jpg" id="thirdbodyimage">
+            <img src="3rdbodyimg.jpg" id="thirdbodyimage">
         </div>
     </div>
     <div class="fourthbody">
         <div class="fourthbodyimage">
-            <img src="images/4thbodyimage.jpg" class="fourthbodyimg">
+            <img src="4thbodyimage.jpg" class="fourthbodyimg">
         </div>
         <div class="fourthbodytext">
             <h2 id="uniqueh2">PERFECTION COMES FROM PRECISION</h2>
