--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="hiddennav">
             <h3 id="topbodytext1">OFFICIAL FERRARI <br>DEALERS</h3>
             <h3 id="topbodytext2">MENU</h3>
-            <a><img src="android.png"
+            <a><img src="menu.png"
                     id="hiddennavmenu"></a>
         </div>
         <div class="bodytext">
